<?xml version="1.0"?>
<package format="2">
  <name>robotis_op3_common</name>
  <version>0.2.0</version>
  <description>
    ROS packages for the robotis_op3_common (meta package)
  </description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/robotis_op3_common</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/op3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Common</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Common/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robotis_op3_description</exec_depend>
  <exec_depend>robotis_op3_gazebo</exec_depend>
  <export><metapackage/></export>
</package>
