<?xml version="1.0"?>
<package>
  <name>robotis_op3_description</name>
  <version>0.0.1</version>
  <description>The robotis_op3_description package</description>
  
  <license>BSD</license>
  <author email="sch@robotis.com">SCH</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
</package>