<?xml version="1.0"?>
<package>
  <name>robotis_op3_gazebo</name>
  <version>0.0.0</version>
  <description>The robotis_op3_gazebo package</description>

  <license>Apache License 2.0</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
